syntax = "proto3";

package model;

// Author of a change.
message Author {
  // Cached identifier of the author, e.g. email or username at the time of
  // change.
  string identifier = 1;
  // Cached pretty-printed name of the author at the time of
  // change.
  string printable_name = 2;
  // User ID of the author. This should be used to get current information
  // about the author.
  oneof account {
    string user_id = 3; // if a user did the change
    string service_account_id = 4; // if a service account did the change
  }
}
